<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_gravity="center"
        android:background="@drawable/oval_shape"
        android:layout_marginBottom="@dimen/margin_normal"
        android:padding="12dp"
        android:gravity="center">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="65dp"
            android:layout_height="65dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/fitness_animation"
            app:lottie_speed="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/weight_kgs"
        android:layout_marginTop="@dimen/_6sdp"/>

    <EditText
        android:id="@+id/weight_kgs_et"
        android:layout_marginTop="@dimen/margin_mini"
        android:background="@drawable/rounded_border_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp"
        android:inputType="numberDecimal"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textAlignment="center"
        android:textSize="17sp" />


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/repEditLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reps"
            android:layout_marginTop="@dimen/_6sdp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_weight="0.6"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/minus_image"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:contentDescription="@string/minus_icon"
                android:src="@drawable/minus_icon"
                app:tint="@color/colorPrimary" />

            <EditText
                android:text="@string/_1"
                android:id="@+id/reps_et"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_toEndOf="@id/minus_image"
                android:autofillHints="@string/quantity"
                android:background="@drawable/rounded_border_design"
                android:inputType="number"
                android:maxLength="3"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/plus_image"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp"
                android:layout_toEndOf="@id/reps_et"
                android:contentDescription="@string/plus_icon"
                android:src="@drawable/plus_icon"
                app:tint="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp">


        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/appGreen"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/app_gradient"
            android:text="@string/confirm" />

    </LinearLayout>
</LinearLayout>