<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/app_gradient"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Add Goal">

    </androidx.appcompat.widget.Toolbar>


    <com.tiper.MaterialSpinner
        android:id="@+id/spinner_view"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_40dp"
        android:hint="@string/exercise"
        app:spinnerMode="dropdown"
        android:focusable="false"/>







    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textColor="@color/appGreen"
            android:layout_alignParentEnd="true"
            android:id="@+id/save"
            android:background="@android:color/transparent"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textColor="@color/appGreen"
            android:id="@+id/cancel"
            android:layout_alignParentStart="@id/save"
            android:background="@android:color/transparent"
            />





    </RelativeLayout>
</LinearLayout>