<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/app_gradient"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Add Exercise">

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:focusableInTouchMode="true"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_margin="@dimen/_8sdp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textColor="@color/appGreen"
            android:layout_alignParentEnd="true"
            android:id="@+id/save"
            android:background="@android:color/transparent"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textColor="@color/appGreen"
            android:id="@+id/cancel"
            android:layout_alignParentStart="@id/save"
            android:background="@android:color/transparent"
            />





    </RelativeLayout>
</LinearLayout>