<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_5sdp">


    <LinearLayout
        android:background="@drawable/app_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/date_tv"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/date"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/time_tv"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/lightGray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_name"/>
            <TextView
                android:id="@+id/exerciseName"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:weightSum="2"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_exercises"/>
            <TextView
                android:id="@+id/exerciseTotal"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercises_list_recycler"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            tools:listitem="@layout/custom_layout_add_exercises_list" />


        <TextView
            android:id="@+id/read_more_tv"
            android:layout_gravity="end"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/open_sans"
            android:text="@string/read_more"
            android:textColor="@color/blue" />

    </LinearLayout>

</androidx.cardview.widget.CardView>